--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/Edit.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
+                <textarea style="resize:none" rows="5" asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -72,7 +72,8 @@
 }
 
 <div>
-    <a class="btn btn-primary"asp-action="AdminIndex">Back to Companies list</a>
+    <a class="btn btn-primary" asp-action="Create" asp-controller="Projects" asp-route-id="@Model.Id">Create a Project</a>
+    <a class="btn btn-primary" asp-action="AdminIndex">Back to Companies list</a>
 </div>
 
 @section Scripts {
