--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Projects/Create.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Projects/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Web.ViewModels.Projects.AddProjectViewModel
+﻿@model BugTracker.Web.ViewModels.Projects.AddProjectInputModel
 
 @{
     ViewData["Title"] = "Create Project";
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+                <textarea style="resize:none" asp-for="Description" class="form-control" rows="3"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
