--- a/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -53,6 +53,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/Moment/moment-with-locales.min.js" asp-append-version="true"></script>
+
+    <script src="./js/dashboard/dashboard-1.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
