--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
@@ -26,7 +26,7 @@
     </dl>
     <h1>Bugs</h1>
     <div>
-        <table class="table table-hover text-center">
+        <table class="table table-bordered table-hover text-center">
             <thead>
                 <tr>
                     <th scope="col">
@@ -57,7 +57,7 @@
                 {
                     @if (bug.Priority.ToString() == "High")
                     {
-                        <tr class="table-danger text-dark">
+                        <tr style="transform: rotate(0);" class="table-danger text-dark">
                             <td>
                                 @Html.DisplayName(bug.Name)
                             </td>
@@ -76,14 +76,14 @@
                             <td>
                                 @Html.DisplayName(bug.Assigned)
                             </td>
-                            <td>
-                                <a class="btn-sm btn-primary text-white" asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
-                            </td>
+                            <th scope="row">
+                                <a class="stretched-link text-info" asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
+                            </th>
                         </tr>
                     }
                     else if (bug.Priority.ToString() == "Medium")
                     {
-                        <tr class="table-warning text-dark">
+                        <tr style="transform: rotate(0);" class="table-warning text-dark">
                             <td>
                                 @Html.DisplayName(bug.Name)
                             </td>
@@ -102,14 +102,14 @@
                             <td>
                                 @Html.DisplayName(bug.Assigned)
                             </td>
-                            <td>
-                                <a class="btn-sm btn-primary text-white" asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
-                            </td>
+                            <th scope="row">
+                                <a class="stretched-link text-info" asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
+                            </th>
                         </tr>
                     }
                     else if (bug.Priority.ToString() == "Low")
                     {
-                        <tr class="table-secondary text-dark">
+                        <tr style="transform: rotate(0);" class="table-secondary text-dark">
                             <td>
                                 @Html.DisplayName(bug.Name)
                             </td>
@@ -128,9 +128,9 @@
                             <td>
                                 @Html.DisplayName(bug.Assigned)
                             </td>
-                            <td>
-                                <a class="btn-sm btn-primary text-white" asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
-                            </td>
+                            <th scope="row">
+                                <a class="stretched-link text-info" asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
+                            </th>
                         </tr>
                     }
                 }
