--- a/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body id="page-top">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand navbar-toggleable-sm navbar-light bg-white topbar mb-4 static-top shadow">
             <div class="container">
                 @if (SignInManager.IsSignedIn(User))
                 {
@@ -31,6 +31,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="topbar-divider d-none d-sm-block"></div>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
@@ -57,8 +58,8 @@
         </main>
     </div>
 
-    <footer class="border-top sticky-footer text-muted">
-        <div class="container">
+    <footer class="sticky-footer text-muted">
+        <div class="container my-auto text-center">
             &copy; 2020 - Bug Tracker - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
