--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
@@ -16,9 +16,10 @@
                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
                 <p class="card-text">@Html.DisplayFor(modelitem => item.Description)</p>
                 <p class="card-text">Projects: @Html.DisplayFor(modelItem => item.Projects.Count)</p>
-                <a class="btn btn-primary" asp-action="Create" asp-controller="Projects" asp-route-id="@item.Id">Create a Project</a> 
-                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a> 
+                <a class="btn btn-primary" asp-action="Create" asp-controller="Projects" asp-route-id="@item.Id">Create a Project</a>
+                <a class="btn btn-primary" asp-area="Administration" asp-controller="Companies" asp-action="Requests" asp-route-id="@item.Id">Join Requests</a>
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </div>
         </div>
     }
