--- a/BugTracker/Web/BugTracker.Web/Views/Home/IndexLogged.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Home/IndexLogged.cshtml
@@ -7,6 +7,8 @@
     <div class="text-center text-dark">
         <h1 class="display-4">Welcome to my Bug Tracker</h1>
         <hr />
+        @if (Model.News.Count() > 0)
+        {
         <h4>News</h4>
         <div class="card-columns">
             @foreach (var news in Model.News)
@@ -26,6 +28,13 @@
             }
         </div>
         <hr />
+        }
+        else
+        {
+
+        }
+        @if (Model.Assignments.Count() > 0)
+        {
         <h4>Assignments</h4>
         <div class="card-columns">
             @foreach (var assignment in Model.Assignments)
@@ -47,4 +56,5 @@
             </div>
             }
         </div>
+        }
     </div>
