--- a/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -69,21 +69,15 @@
     </a>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="~/vendor/jquery/jquery.min.js"></script>
+    <script src="~/vendor/jquery/dist/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="~/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+
+    <script src="~/vendor/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="~/js/sb-admin-2.min.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="~/vendor/chart.js/Chart.min.js"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="~/js/demo/chart-area-demo.js"></script>
-    <script src="~/js/demo/chart-pie-demo.js"></script>
+    <script src="~/js/site.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
